Fixed fab z-index

--- a/assets/sass/_classes.scss
+++ b/assets/sass/_classes.scss
@@ -71,6 +71,7 @@
     bottom: 1rem;
     right: 1rem;
     background: $primary;
+    z-index: 1000;
   }
 
 }
